force-app/main/default/objects/Career_Pathway__c/Career_Pathway__c.object-meta.xml
<CustomObject>
    <description>AI-generated career progression pathway</description>
    <label>Career Pathway</label>
    <nameField>
        <displayFormat>PATH-{00000}</displayFormat>
        <label>Career Pathway Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Career Pathways</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>