force-app/main/default/objects/Career_Pathway__c/fields/AI_Model_Used__c.field-meta.xml
<CustomField>
    <fullName>AI_Model_Used__c</fullName>
    <description>Model that generated</description>
    <label>AI Model Used</label>
    <length>100</length>
    <type>Text</type>
</CustomField>