force-app/main/default/objects/Career_Pathway__c/fields/Aspirational_Goal__c.field-meta.xml
<CustomField>
    <fullName>Aspirational_Goal__c</fullName>
    <description>End goal description</description>
    <label>Aspirational Goal</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>