force-app/main/default/objects/Career_Pathway__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Career Pathways (Candidate)</relationshipLabel>
    <relationshipName>Career_Pathways1</relationshipName>
    <type>Lookup</type>
</CustomField>