force-app/main/default/objects/Career_Pathway__c/fields/Candidate_Approved__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Candidate confirmed pathway</description>
    <label>Candidate Approved</label>
    <type>Checkbox</type>
</CustomField>