force-app/main/default/objects/Career_Pathway__c/fields/Career_Intent__c.field-meta.xml
<CustomField>
    <fullName>Career_Intent__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source intent</description>
    <label>Career Intent</label>
    <referenceTo>Career_Intent__c</referenceTo>
    <relationshipLabel>Career Pathways</relationshipLabel>
    <relationshipName>Career_Pathways</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>