force-app/main/default/objects/Career_Pathway__c/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <description>Starting point description</description>
    <label>Current State</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>