force-app/main/default/objects/Career_Pathway__c/fields/Estimated_Duration_Years__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Duration_Years__c</fullName>
    <description>Total years to goal</description>
    <label>Estimated Duration Years</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>