force-app/main/default/objects/Career_Pathway__c/fields/Feasibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Score__c</fullName>
    <label>Feasibility Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>