force-app/main/default/objects/Career_Pathway__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <description>When AI created this</description>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>