force-app/main/default/objects/Career_Pathway__c/fields/Generation_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Generation_Prompt__c</fullName>
    <description>Prompt used (for debugging)</description>
    <label>Generation Prompt</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>