force-app/main/default/objects/Career_Pathway__c/fields/Generation_Prompt_Id__c.field-meta.xml
<CustomField>
    <fullName>Generation_Prompt_Id__c</fullName>
    <label>Prompt Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>