force-app/main/default/objects/Career_Pathway__c/fields/Last_Regenerated__c.field-meta.xml
<CustomField>
    <fullName>Last_Regenerated__c</fullName>
    <description>Last time regenerated</description>
    <label>Last Regenerated</label>
    <type>DateTime</type>
</CustomField>