force-app/main/default/objects/Career_Pathway__c/fields/Stage_Count__c.field-meta.xml
<CustomField>
    <fullName>Stage_Count__c</fullName>
    <description>Number of stages</description>
    <label>Stage Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>