force-app/main/default/objects/Career_Pathway__c/fields/Total_Stages_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Stages_c__c</fullName>
    <label>Total_Stages__c</label>
    <summaryForeignKey>Career_Pathway_Stage__c.Career_Pathway__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>